style: fix places cards align

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -15,3 +15,13 @@ a {
 .main-content {
   max-width: 95%;
 }
+
+.card-img-top {
+  max-height: 200px;
+  width: fit-content;
+  object-fit: contain;
+}
+
+.card {
+  align-items: center;
+}
